# git-recycle-bin

./: .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  LICENSE  contribution.md  default.nix  deps.nix  derivation.nix  design_notes.txt  justfile  pyproject.toml  rbgit  readme.md  setup.py  shell.nix
.github/workflows/: ci.yml
aux/: git_add_ssh_remote.sh
demos/: clean.justfile  download.justfile  lib.justfile  list.justfile  push.justfile
docs/: conf.py  index.rst  modules.rst
git-recycle-bin/: __init__.py  arg_parser.py  artifact_commit.py  commit_msg.py  main.py  query.py  rbgit.py
git-recycle-bin/commands/: cat_meta.py  (+4 more)
issues/: 0001-git-notes-integration.md  0002-gitlfs-support.md  0003-non-orphan-lineage.md  0004-non-expiring-artifacts.md  0005-library-support.md  0006-ui-queries-overview.md  0007-python-test-matrix.md  0008-prepare-for-pypi.md  0009-versioning-strategy.md  0010-stress-testing.md  0011-multi-python-testing.md  0011-sibling-demo-src-bin-projects.md
src/: arg_parser.py  artifact.py  checkpoint.py  commit_msg.py  download.py  git_recycle_bin.py  list.py  parser.py  printer.py  rbgit.py  util.py  util_date.py  util_file.py  util_string.py  util_sysinfo.py
tests/: conftest.py  managers.py  test_arg_parser.py  test_artifact.py  test_clean.py  test_commit_msg.py  test_download.py  test_git_recycle_bin_cmds.py  test_git_recycle_bin_more.py  test_list.py  test_printer.py  test_rbgit.py  test_util.py  test_util_date.py  test_util_extern.py  test_util_file.py  test_util_string.py  test_util_sysinfo.py
(+2 files in other folders)
